--- a/doc-the-chinese-farmer.html
+++ b/doc-the-chinese-farmer.html
@@ -19,9 +19,9 @@
     
         <p>In life, there are 4 types of people.
             <ul>
-                <li id="thumbsup">people who think the Internet is <span class="good">good</span>,</li>
-                <li id="thumbsdown">people who think the Internet is evil,</li>
-                <li id="cats">people who think the Internet is <a href="https://en.wikipedia.org/wiki/Cats_and_the_Internet" title="cats! on the internet!" target="_blank">cats</a>,</li>
+                <li>people who think the Internet is <span class="good">good</span>,</li>
+                <li>people who think the Internet is evil,</li>
+                <li>people who think the Internet is <a href="https://en.wikipedia.org/wiki/Cats_and_the_Internet" title="cats! on the internet!" target="_blank">cats</a>,</li>
                 <li>people who don't think about it.</li>
             </ul>
         </p>
